custom-manifests/canary/frontend-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-canary
  namespace: divesh-boutique
  labels:
    app: frontend-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-canary
  template:
    metadata:
      labels:
        app: frontend-canary
    spec:
      serviceAccountName: frontend
      containers:
      - name: server
        image: us-central1-docker.pkg.dev/google-samples/microservices-demo/frontend:v0.10.5
        ports:
        - containerPort: 8080

        readinessProbe:
          httpGet:
            path: /_healthz
            port: 8080
          initialDelaySeconds: 10

        livenessProbe:
          httpGet:
            path: /_healthz
            port: 8080
          initialDelaySeconds: 10
