custom-manifests/canary/frontend-canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-canary
  namespace: divesh-boutique
spec:
  selector:
    app: frontend-canary

  ports:
  - port: 80
    targetPort: 8080
